--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@gorhom/bottom-sheet": "^5.0.0-alpha.11",
     "@legendapp/motion": "^2.4.0",
     "@react-aria/utils": "^3.29.0",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/drawer": "^7.7.2",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "dom-helpers": "^5.2.1",
     "expo": "^54.0.7",
@@ -39,12 +41,14 @@
     "react-aria": "^3.41.1",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-reanimated": "~4.1.0",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.5.1",
+    "react-navigation": "^5.0.0",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20",
     "tailwindcss": "^3.4.17"
